@@ -6,7 +6,9 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.apache.commons.lang3.math.NumberUtils;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.Socket;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
@@ -40,10 +42,32 @@ public class ShutdownNetworkAction extends NetworkAction {
 
 		if (!isDryRun) {
 			try {
-				Runtime.getRuntime().exec(cmdLine);
+				ProcessBuilder builder = new ProcessBuilder(cmdLine);
+
+				// Redirect the error stream to the output stream to ensure all output is
+				// captured
+				builder.redirectErrorStream(true);
+				Process process = builder.start();
+
+				// Get the input stream (which now includes standard error due to
+				// redirectErrorStream(true))
+				try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+					String line;
+					while ((line = reader.readLine()) != null) {
+						log.debug(line);
+					}
+				}
+
+				// Wait for the process to complete and get the exit code
+				int exitCode = process.waitFor();
+				log.debug("shutdown exit code: {}", exitCode);
 			}
 			catch (IOException e) {
 				log.error("Error executing shutdown command", e);
+			}
+			catch (InterruptedException e) {
+				log.error("Error executing shutdown command", e);
+				Thread.currentThread().interrupt();
 			}
 		}
 		else {
@@ -83,10 +107,17 @@ public class ShutdownNetworkAction extends NetworkAction {
 			cmd.add(String.valueOf(timeInSeconds));
 		}
 		else if (SystemUtils.IS_OS_MAC || SystemUtils.IS_OS_UNIX) {
-			cmd.add("sudo");
+			// cmd.add("sudo"); // using 'sudo' requires human intervention ;)
+			// shutdown command uses time in minutes
+			String sdTime = "now";
+			int minutes = Math.toIntExact(timeInSeconds / 60);
+			if (minutes > 0) {
+				sdTime = "+" + minutes;
+			}
+
 			cmd.add("shutdown");
 			cmd.add("-h");
-			cmd.add(timeInSeconds == 0 ? "now" : "+" + (timeInSeconds / 60));
+			cmd.add(sdTime);
 		}
 
 		return cmd.toArray(new String[0]);
